--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@types/node": "^12.20.11",
 		"@types/react": "^17.0.4",
 		"@types/react-dom": "^17.0.3",
+		"keycloak-js": "^13.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.3.5",
