--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"keycloak-js": "^13.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-dropdown": "^1.9.2",
 		"react-hook-form": "^7.3.5",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
